@@ -8,16 +8,7 @@
 
 SERVER_NAME="${ISABELLE_IDENTIFIER:-Isabelle}"
 
-case "$ISABELLE_JAVA_PLATFORM" in
-  x86_64-*)
-    JEDIT_JAVA_OPTIONS="$JEDIT_JAVA_OPTIONS64"
-    ;;
-  *)
-    JEDIT_JAVA_OPTIONS="$JEDIT_JAVA_OPTIONS32"
-    ;;
-esac
-
-declare -a JAVA_ARGS; eval "JAVA_ARGS=($JEDIT_JAVA_SYSTEM_OPTIONS $JEDIT_JAVA_OPTIONS)"
+eval "declare -a JAVA_ARGS=($JEDIT_JAVA_SYSTEM_OPTIONS $JEDIT_JAVA_OPTIONS)"
 
 
 ## diagnostics
